<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/backgroundsplashscreen"

    android:orientation="vertical"
    tools:context=".activities.MainActivity">

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
<<<<<<< HEAD
       android:layout_below="@+id/logo"

       android:layout_centerInParent="true"
       android:layout_marginStart="10dp"
       android:layout_marginTop="70dp"
       android:layout_marginEnd="10dp"
       android:layout_marginBottom="10dp"
       android:background="@drawable/border"
       android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:text="@string/first_name_and_last_name"
          android:textSize="18sp"
          android:textStyle="bold|italic" />

      <EditText
          android:id="@+id/inputName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:hint="@string/name_label"
          android:minHeight="48dp"
          android:inputType="text" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="50dp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginBottom="10dp"
          android:text="Email"
          android:textSize="18sp"
          android:textStyle="bold|italic" />

      <EditText
          android:id="@+id/inputEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:hint="Taper votre email"
          android:inputType="textEmailAddress"
          android:minHeight="48dp" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="50dp" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"

          android:text="Date de naissance "
          android:textSize="18sp"
          android:textStyle="bold|italic" />


=======
       android:layout_marginStart="20dp"
       android:layout_marginEnd="20dp"
       android:background="@color/white"
       app:cardCornerRadius="8dp"
       app:cardElevation="5dp"
       >
>>>>>>> 5c9b6bb5a126893dd07b08b0d5e58d0f107afd71
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/Quiz"
             android:textColor="#456CFA"
             android:textSize="30sp"
             android:textStyle="bold"/>


         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/First_Name"
                android:textColor="#000000"
                android:textColorHint="#000000"/>
         </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/birthday"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/date_of_birth"
                   android:textColor="#000000"
                   android:textColorHint="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/datePickerButton"

                android:layout_width="56dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@color/background"
                android:src="@drawable/calendar_foreground"
                tools:ignore="ContentDescription" />

         </LinearLayout>



         <Button
             android:id="@+id/Btnnext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="#456CFA"
             android:text="@string/let_s_start"
             android:textSize="18sp"
             android:textColor="@color/background"/>
      </LinearLayout>

   </androidx.cardview.widget.CardView>






</LinearLayout>